# rustobot5000

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: embyclient.rs  gameserver.rs  gstreamer.rs  main.rs  video_commands.rs
